<?xml version="1.0"?>
<package>
  <name>ecl_linear_algebra</name>
  <version>0.61.17</version>
  <description>
     Ecl frontend to a linear matrix package (currently eigen).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_linear_algebra</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_converters</build_depend>
  <build_depend>ecl_eigen</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_formatters</build_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_math</build_depend>
  <build_depend>sophus</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_converters</run_depend>
  <run_depend>ecl_eigen</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_formatters</run_depend>
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_math</run_depend>
  <run_depend>sophus</run_depend>
</package>


