<?xml version="1.0"?>
<package format="2">
  <name>ecl_manipulators</name>
  <version>1.2.1</version>
  <description>
    Deploys various manipulation algorithms, currently just
    feedforward filters (interpolations).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_manipulators</url>
  <url type="repository">https://github.com/stonier/ecl_manipulation</url>
  <url type="bugtracker">https://github.com/stonier/ecl_manipulation/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_formatters</build_depend>

  <exec_depend>ecl_build</exec_depend>
  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_geometry</exec_depend>
  <exec_depend>ecl_formatters</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>


